--- a/_includes/themes/the-minimum/default.html
+++ b/_includes/themes/the-minimum/default.html
@@ -24,6 +24,7 @@
 						<li class="archive"><a href="/archive.html">archive</a></li>
 						<li class="category"><a href="/categories.html">categories</a></li>
 						<li class="tag"><a href="/tags.html">tags</a></li>
+						<li class="about"><a href="/about.html">about me</a></li>
 					</ul>
 				</nav>
 			</div><!-- unit-inner -->
